--- a/package.json
+++ b/package.json
@@ -24,5 +24,18 @@
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jdavellanedag/personal-web-site.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jdavellanedag/personal-web-site/issues"
+  },
+  "homepage": "https://github.com/jdavellanedag/personal-web-site#readme",
+  "description": ""
 }
