--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.0",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.3.0"
   },
