--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.6",
     "@emailjs/browser": "^3.6.2",
     "@uiball/loaders": "^1.2.6",
     "framer-motion": "^6.2.8",
+    "graphql": "^16.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.39.0",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.3.0"
