--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^6.2.8",
     "graphql": "^16.5.0",
     "react": "^17.0.2",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
