--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.6",
     "@emailjs/browser": "^3.6.2",
+    "@types/react-syntax-highlighter": "^15.5.4",
     "@uiball/loaders": "^1.2.6",
     "framer-motion": "^6.2.8",
     "graphql": "^16.5.0",
@@ -20,7 +21,9 @@
     "react-markdown": "^8.0.3",
     "react-query": "^3.39.0",
     "react-responsive": "^9.0.0-beta.6",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
